5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1709_3060.log
== TEST (2019-05-02 11:08:23) 
-- CODE:
d1=int(input())
d2=int(input())
rd=int(input())
if(d1<=0 or d1>6 or d2<=0 or d2>6 or rd<0):
	print("Entrada invalida")
else:
	if((d1+d2)==12):
		print("CONSTRICAO")
		print("13")
	elfi((d1+d2)<5):
		print("POLEN")
		dano=(d1+d2+1)*rd
		print(dano)
	else:
		print("FRAQUEZA")
		dano=d1*d2
		print(dano)
-- ERROR:
File "XXXX", line 10
    elfi((d1+d2)<5):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:08:39) 
-- CODE:
d1=int(input())
d2=int(input())
rd=int(input())
if(d1<=0 or d1>6 or d2<=0 or d2>6 or rd<0):
	print("Entrada invalida")
else:
	if((d1+d2)==12):
		print("CONSTRICAO")
		print("13")
	elif((d1+d2)<5):
		print("POLEN")
		dano=(d1+d2+1)*rd
		print(dano)
	else:
		print("FRAQUEZA")
		dano=d1*d2
		print(dano)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:08:42) 
-- CODE:
d1=int(input())
d2=int(input())
rd=int(input())
if(d1<=0 or d1>6 or d2<=0 or d2>6 or rd<0):
	print("Entrada invalida")
else:
	if((d1+d2)==12):
		print("CONSTRICAO")
		print("13")
	elif((d1+d2)<5):
		print("POLEN")
		dano=(d1+d2+1)*rd
		print(dano)
	else:
		print("FRAQUEZA")
		dano=d1*d2
		print(dano)
-- EXECUTION TIME:
0.202483
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FRAQUEZA
15
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEN
27
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
